<resources>
    <string name="app_name">GudRecipe</string>
    <string name="action_settings">Settings</string>
    <string name="add_ingredients">Add Ingredients</string>
    <string name="quantity">Quantity:</string>
    <string name="measurement_type">Measurement type:</string>
    <string name="type_of_food">Type of food:</string>
    <string name="ingredient_label">Ingredient label:</string>
    <string name="ingredient_label_input_prompt">Ingredient label</string>
    <string name="add_to_recipe">Add to Recipe</string>
    <string name="calculate_nutrition">Calculate Nutrition</string>
    <string name="measurement_string">"Pinch", "Teaspoon", "Tablespoon", "Cup", "Kilogram"</string>
    <string name="select_the_type_of_food_stuff">Select the Type of Food Stuff</string>


</resources>
